cedar-language-server/src/documentation/snapshots/cedar_language_server__documentation__resource__test__concrete_entity_type_with_schema.snap
---
source: cedar-language-server/src/documentation/resource.rs
expression: docs.to_documentation_string(Some(&schema))
---
# Resource

The resource element in a Cedar policy is a resource defined by your application that can
be accessed or modified by the specified action.

The resource element must be present. If you specify only resource without an expression
that constrains its scope, then the policy applies to any resource.

**Type**

Entity Type: `Photo`

Attributes:

```cedarschema
private: Bool
size: Long
```
